--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <g id="gApertureControl" transform="translate(430,40)">
     <polygon class="control" points="30,0 60,50 0,50" onclick="camera.stopUp();"/>
     <g transform="translate(0,60)" onclick="camera.setFStop(2);">
-      <rect class="apSetting control" class="control" width="60" height="20" rx="4" ry="4"/>
+      <rect class="apSetting control" width="60" height="20" rx="4" ry="4"/>
       <text x="20" y="15" class="controlText"><tspan class="apText">f</tspan> 2</text>
     </g>
     <g transform="translate(0,90)" onclick="camera.setFStop(2.8);">
