--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Scalable Vector Graphic visualisation of the relationship between f-Stop, Shutter, ISO and focal length.">
+  <meta name="description" content="Interactive visualisation of the relationship between f-Stop, Shutter, ISO and focal length, in SVG and Javascript.">
   <meta name="keywords" content="Aperture, f-Stop, exposure, shutter, ISO, focal length, camera, SVG, visualisation, animation, graphic">
   <meta name="author" content="Eleanor Durrant">
   <script src="camera.js"></script>
@@ -10,10 +10,10 @@
   <title>f-Stop, Shutter and ISO Visualiser</title>
 </head>
 
-<body onload="camera.setDefaults();">
+<body onload="camera.set();">
 <div class="layoutp">
-<svg width="500" height="400">
-  <rect class="graphic" width="500" height="400" />
+<svg width="500" height="430">
+  <rect class="graphic" width="500" height="430" />
   <g id="gAperture" transform="translate(240,150)">
     <circle id="aperture" cx="10" cy="11" r="4.5mm" stroke="black" stroke-width="1" fill="yellow"/>
     <circle cx="10" cy="11" r="1.6mm" class="visInactive"/>
@@ -26,86 +26,88 @@
   </g>
   
   <g id="gISOControl" transform="translate(165,20)">
-    <g onClick="camera.setISO('200');">
+    <g onClick="camera.set('iso','200');">
       <rect class="isoSetting control" width="45" height="45" rx="4" ry="4" />
       <text class="controlText"><tspan x="15" y="20">ISO</tspan><tspan x="14" y="35">200</tspan></text>
     </g>
-    <g transform="translate(60,0)" onClick="camera.setISO('400');">
+    <g transform="translate(60,0)" onClick="camera.set('iso','400');">
       <rect class="isoSetting control" width="45" height="45" rx="4" ry="4" />
       <text class="controlText"><tspan x="15" y="20">ISO</tspan><tspan x="14" y="35">400</tspan></text>
     </g>
-    <g transform="translate(120,0)" onClick="camera.setISO('800');">
+    <g transform="translate(120,0)" onClick="camera.set('iso','800');">
       <rect class="isoSetting control" width="45" height="45" rx="4" ry="4" />
       <text class="controlText"><tspan x="15" y="20">ISO</tspan><tspan x="14" y="35">800</tspan></text>
     </g>
   </g>
   
   <g id="gApertureControl" transform="translate(430,40)">
-    <polygon class="control" points="30,0 60,50 0,50" onclick="camera.stopUp();"/>
-    <g transform="translate(0,60)" onclick="camera.setFStop(2);">
-      <rect class="apSetting control" width="60" height="20" rx="4" ry="4"/>
+    <polygon class="control" points="30,0 60,50 0,50" onclick="camera.set('fStopOpen');"/>
+    <g transform="translate(0,60)" onclick="camera.set('fStop',2);">
+      <rect class="apSetting control" class="control" width="60" height="20" rx="4" ry="4"/>
       <text x="20" y="15" class="controlText"><tspan class="apText">f</tspan> 2</text>
     </g>
-    <g transform="translate(0,90)" onclick="camera.setFStop(2.8);">
+    <g transform="translate(0,90)" onclick="camera.set('fStop',2.8);">
       <rect class="apSetting control" width="60" height="20" rx="4" ry="4"/>
       <text x="20" y="15"  class="controlText"><tspan class="apText">f</tspan> 2.8</text>
     </g>
-    <g transform="translate(0,120)" onclick="camera.setFStop(4);">
+    <g transform="translate(0,120)" onclick="camera.set('fStop',4);">
       <rect class="apSetting control" width="60" height="20" rx="4" ry="4"/>
       <text x="20" y="15" class="controlText"><tspan class="apText">f</tspan> 4</text>
     </g>
-    <g transform="translate(0,150)" onclick="camera.setFStop(5.6);">
+    <g transform="translate(0,150)" onclick="camera.set('fStop',5.6);">
       <rect class="apSetting control" width="60" height="20" rx="4" ry="4"/>
       <text x="20" y="15" class="controlText"><tspan class="apText">f</tspan> 5.6</text>
     </g>
-    <g transform="translate(0,180)" onclick="camera.setFStop(8);">
+    <g transform="translate(0,180)" onclick="camera.set('fStop',8);">
       <rect class="apSetting control" width="60" height="20" rx="4" ry="4"/>
       <text x="20" y="15" class="controlText"><tspan class="apText">f</tspan> 8</text>
     </g>
-    <g transform="translate(0,210)" onclick="camera.setFStop(11);">
+    <g transform="translate(0,210)" onclick="camera.set('fStop',11);">
       <rect class="apSetting control" width="60" height="20" rx="4" ry="4"/>
       <text x="20" y="15" class="controlText"><tspan class="apText">f</tspan> 11</text>
     </g>
-    <g transform="translate(0,240)" onclick="camera.setFStop(16);">
+    <g transform="translate(0,240)" onclick="camera.set('fStop',16);">
       <rect class="apSetting control" width="60" height="20" rx="4" ry="4"/>
       <text x="20" y="15"  class="controlText"><tspan class="apText">f</tspan> 16</text>
     </g>
-    <polygon points="30,320 60,270 0,270" class="control" onclick="camera.stopDown();" />
+    <polygon points="30,320 60,270 0,270" class="control" onclick="camera.set('fStopClose');" />
   </g>
+  
+  
   
   <g id="gShutterControl" transform="translate(10,40)">
     <g transform="translate(0,0)">
-      <polygon class="control" points="30,0 60,50 0,50" onclick="camera.shutterOpen();"/>
+      <polygon class="control" points="30,0 60,50 0,50" onclick="camera.set('shutterOpen');"/>
     </g>
-    <g transform="translate(0,60)" onclick="camera.setTime('1/15');">
+    <g transform="translate(0,60)" onclick="camera.set('shutter','1/15');">
       <rect class="shSetting control" width="60" height="20" rx="4" ry="4"/>
       <text x="15" y="15" class="controlText">1/15</text>
     </g>
-    <g transform="translate(0,90)" onclick="camera.setTime('1/30');">
+    <g transform="translate(0,90)" onclick="camera.set('shutter','1/30');">
       <rect class="shSetting control" width="60" height="20" rx="4" ry="4"/>
       <text x="15" y="15"  class="controlText">1/30</text>
     </g>
-    <g transform="translate(0,120)" onclick="camera.setTime('1/60');">
+    <g transform="translate(0,120)" onclick="camera.set('shutter','1/60');">
       <rect class="shSetting control" width="60" height="20" rx="4" ry="4"/>
       <text x="15" y="15" class="controlText">1/60</text>
     </g>
-    <g transform="translate(0,150)" onclick="camera.setTime('1/125');">
+    <g transform="translate(0,150)" onclick="camera.set('shutter','1/125');">
       <rect class="shSetting control" width="60" height="20" rx="4" ry="4"/>
       <text x="15" y="15" class="controlText">1/125</text>
     </g>
-    <g transform="translate(0,180)" onclick="camera.setTime('1/250');">
+    <g transform="translate(0,180)" onclick="camera.set('shutter','1/250');">
       <rect class="shSetting control" width="60" height="20" rx="4" ry="4"/>
       <text x="15" y="15" class="controlText">1/250</text>
     </g>
-    <g transform="translate(0,210)" onclick="camera.setTime('1/500');">
+    <g transform="translate(0,210)" onclick="camera.set('shutter','1/500');">
       <rect class="shSetting control" width="60" height="20" rx="4" ry="4"/>
       <text x="15" y="15" class="controlText">1/500</text>
     </g>
-    <g transform="translate(0,240)" onclick="camera.setTime('1/1000');">
+    <g transform="translate(0,240)" onclick="camera.set('shutter','1/1000');">
       <rect class="shSetting control" width="60" height="20" rx="4" ry="4"/>
       <text x="15" y="15"  class="controlText">1/1000</text>
     </g>
-    <polygon class="control" points="60,270 30,320 0,270" onclick="camera.shutterClose();" />
+    <polygon class="control" points="60,270 30,320 0,270" onclick="camera.set('shutterClose');" />
   </g>
   
   <g id="apValueText" transform="translate(160,240)">
@@ -146,14 +148,32 @@
 
   <rect id="exposureVis" transform="translate(130,90)" width="240" height="260" class="visInactive" style="fill:transparent;"/>
   
-  <g id="modeControl" transform="translate(215,365)" onClick="camera.setDefaults();">
-    <rect class="control" width="60" height="20" rx="4" ry="4"/>
+  <g id="gModeControl" transform="translate(110,365)">
+    <g onClick="camera.set('mode','S');">
+      <rect class="modeSetting control" id="S" width="100" height="20" rx="4" ry="4"/>
+      <text x="12" y="14" class="controlText">Shutter Priority</text>
+    </g>
+    <g transform="translate(110,0)" onClick="camera.set('mode','M');">
+      <rect class="modeSetting control" id="M" width="60" height="20" rx="4" ry="4"/>
+      <text x="10" y="14" class="controlText">Manual</text>
+    </g>
+    <g transform="translate(180,0)" onClick="camera.set('mode','A');">
+      <rect class="modeSetting control" id="A" width="100" height="20" rx="4" ry="4"/>
+      <text x="8" y="14" class="controlText">Aperture Priority</text>
+    </g>
+  </g>
+  <g transform="translate(220,400)" onClick="camera.set();">
+    <rect class="control" id="Reset" width="60" height="20" rx="4" ry="4"/>
     <text x="16" y="14" class="controlText">Reset</text>
   </g>
 </svg>
 </div>
 <h1>Camera Visualiser</h1>
+
 <p>This scalable vector graphic visualises the behaviour of a camera and the meaning of f-stop.
-<p>&copy; Eleanor Durrant 2015 @spikylellie
+<p>Version 2.0 with aperture-priority and shutter-priority modes.
+<p>&copy; Eleanor Durrant 2015
+
+<p><span id="debuginfo"></span>
 </body>
 </html>
